# killa

./: .gitignore  Cargo.toml  README.md  flake.nix  ideas.txt  justfile
.github/workflows/: build.yml
crates/bottom/: Cargo.toml  README.md
crates/bottom/src/: lib.rs
crates/bottom/src/utils/: cancellation_token.rs
examples/iced_table/: Cargo.toml
examples/sysinfo/: Cargo.toml
examples/sysinfo/src/: main.rs
src/: collect_uptimes.rs  keybinds.rs  keyboard_thingy.rs  keys.rs  main.rs  optional_every.rs  poll_btm.rs  process_data.rs  stream_ext.rs  subscription_filter_map.rs  sysinfo.rs
src/collector/: collector.rs  colv2.rs  init.rs  mod.rs
src/ui/: message.rs  mod.rs  table.rs
