[package]
name = "killa"
description = "Process monitor for Wayland"
version = "0.0.0"
authors = ["rszyma <rszyma.dev@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
publish = false

[workspace]
members = [
    ".",
    "examples/*",
    "crates/*",
]

[dependencies]
bottom = { path = "./crates/bottom" }
bytesize.workspace = true
iced.workspace = true
iced_futures = "0.13.1"
iced_native = "0.10.3"
iced_table.workspace = true
plotters-iced = "0.11.0"
tokio = "1.43.0"

[workspace.dependencies]
bytesize = "1.1"
iced = { version = "0.13.1", features = [
    "system", "lazy", "tokio", "canvas"
    # "logging"
    # "debug"
] }

# 0.14 waiting room - which will include perf optizmiation improvement
# when just moving mouse around.
#  https://github.com/iced-rs/iced/pull/2662
iced_table = "0.13.0"

[workspace.dependencies.tokio]
workspace = true
features = ["time"]

# + auto-detect-theme
# + fira-sans
# + tiny-skia
# + wgpu
# - advanced
# - async-std
# - canvas
# - debug
# - highlighter
# - iced_highlighter
# - image
# - image-without-codecs
# - lazy
# - markdown
# - multi-window
# - qr_code
# - smol
# - svg
# - system
# - tokio
# - web-colors
# - webgl
