[package]
name = "killa"
description = "Process monitor for Wayland"
version = "0.0.0"
authors = ["rszyma <rszyma.dev@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
publish = false

[workspace]
members = [
    ".",
    "crates/*",
]

[dependencies]
bottom = { path = "./crates/bottom" }
bytesize = "1.1"
# 0.14 waiting room - which will include perf optizmiation improvement
# when just moving mouse around.
#  https://github.com/iced-rs/iced/pull/2662
iced = { version = "0.14.0", features = [
    # "system",
    "lazy",
    "tokio",
    "canvas"
    # "logging"
    # "debug"
] }

num_cpus = "1.16.0"
tokio = { version = "1.46.1", features = ["time"] }

humantime = "2.1.0"
procfs = { version = "0.17.0", features = [ "chrono" ] }
chrono = "0.4.39"
rustix = "0.38.44"
anyhow = "1.0.95"
sysinfo = "0.33.1"
